# Floppa

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/Floppa/: Base.h  Color.h  Drawer.h  Encoding.h  Engine.h  Exceptions.h  IndexBuffer.h  Math.h  Rect.h  Renderer.h  SmartPointer.h  UDim.h  Vector2.h  Vector3.h  VertexBuffer.h  Window.h  WindowEvents.h
src/Floppa/: Drawer.cpp  Encoding.cpp  Engine.cpp  IndexBuffer.cpp  Renderer.cpp  VertexBuffer.cpp  Window.cpp
src/Floppa/Win32/: Window.cpp  Window.h
src/Floppa/Win32/OpenGL3/: GLBuffer.cpp  GLBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
